--- a/navbar.html
+++ b/navbar.html
@@ -92,7 +92,7 @@
         </div>
         <div style="display: flex; align-items: center;">
             <ul>
-                <li><a href="csdt.html">CSDT</a></li>
+                <li><a href="index.html">CSDT</a></li>
                 <li><a href="installation.html">Installation Guide</a></li>
                 <li><a href="user-guide.html">User Guide</a></li>
                 <li class="dropdown">
