Initial commit with navbar and dropdown implementation

--- a/navbar.html
+++ b/navbar.html
@@ -87,7 +87,7 @@
     <!-- Navbar -->
     <nav>
         <div style="display: flex; align-items: center;">
-            <img src="logo.jpg" alt="CSDT">
+            <img src="logo.png" alt="CSDT">
             <span>CSDT</span>
         </div>
         <div style="display: flex; align-items: center;">
