Initial commit with navbar and dropdown implementation

--- a/installation.html
+++ b/installation.html
@@ -107,5 +107,8 @@ conda activate csdt
             .then(data => document.getElementById('navbar').innerHTML = data)
             .catch(err => console.error('Navbar could not be loaded:', err));
     </script>
+        <footer>
+            <p>&copy; 2024 Custom Split Decision Tree</p>
+        </footer>
 </body>
 </html>
