--- a/regression.html
+++ b/regression.html
@@ -343,7 +343,7 @@ plt.savefig(sklearn_output_path, format='png', dpi=300, bbox_inches='tight')</pr
     </script>
 
     <footer>
-        <p>&copy; 2024 Experiment Regressor Documentation</p>
+        <p>&copy; 2024 Custom Split Decision Tree</p>
     </footer>
 </body>
 
