--- a/user-guide.html
+++ b/user-guide.html
@@ -162,5 +162,8 @@ dot.render("results/csdt_tree", format="png", view=True)
             .then(data => document.getElementById('navbar').innerHTML = data)
             .catch(err => console.error('Navbar could not be loaded:', err));
     </script>
+        <footer>
+            <p>&copy; 2024 Custom Split Decision Tree</p>
+        </footer>
 </body>
 </html>
