--- a/contribute.html
+++ b/contribute.html
@@ -110,5 +110,8 @@ git push origin feature-name
             .then(data => document.getElementById('navbar').innerHTML = data)
             .catch(err => console.error('Navbar could not be loaded:', err));
     </script>
+        <footer>
+            <p>&copy; 2024 Custom Split Decision Tree</p>
+        </footer>
 </body>
 </html>
