--- a/csdt.html
+++ b/csdt.html
@@ -66,9 +66,9 @@
             <h2>Introduction</h2>
             <p>
                 The Custom Split Decision Tree (CSDT) is a flexible and customizable decision tree algorithm 
-                that allows users to define their own criteria for data splitting and prediction. Unlike 
-                traditional decision trees, CSDT gives users the ability to tailor these critical functionalities, 
-                enabling optimized solutions for a variety of problem types.
+                that allows users to define their own criteria for data splitting and prediction. Unlike most 
+                decision tree packages, CSDT gives users the ability to tailor these critical functionalities, 
+                enabling customized solutions for a variety of problem types.
             </p>
         </section>
         <section>
@@ -150,8 +150,10 @@ tree.fit(features_df, labels_df)
         <section>
             <h2>Conclusion</h2>
             <p>
-                CSDT stands apart from traditional decision trees by offering users full control over data splitting and prediction processes. 
-                This flexibility makes it a powerful tool for specialized tasks, such as multi-target regression, custom error metrics, and domain-specific applications. 
+                CSDT stands apart from traditional decision trees by offering users full control over data splitting 
+                and prediction processes. This flexibility makes it a powerful tool for specialized tasks, such as 
+                multi-target regression, custom error metrics, and domain-specific applications. Beyond being a machine 
+                learning model, CSDT serves as a platform for developing custom solutions tailored to unique datasets and problem types.    
                 Beyond being a machine learning model, CSDT serves as a platform for developing custom solutions tailored to unique datasets and problem types.
             </p>
         </section>
