--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
                     <li><b>min_samples_leaf:</b> Minimum number of samples required in a leaf node.</li>
                     <li><b>min_samples_split:</b> Minimum number of samples required to split a node.</li>
                     <li><b>split_criteria:</b> User-defined function for evaluating split quality.</li>
-                    <li><b>ccp_alpha:</b> Cost-complexity pruning parameter (currently not implemented).</li>
                     <li><b>max_features:</b> Maximum number of features considered for splitting.</li>
                     <li><b>random_state:</b> Seed value for reproducibility.</li>
                     <li><b>Tree:</b> Stores the root node of the tree.</li>
+                    <li><b>use_hashmaps:</b> Whether to use hashmaps for faster computations and lookups.</li></li>
+                    <li><b>use_initial_solution:</b>Whether to start the tree building process with an initial heuristic solution. </li>
                 </ul>
             </section>
             <section>
