--- a/classifier.html
+++ b/classifier.html
@@ -245,8 +245,8 @@
     <section>
         <div class="code-block">
             <pre>
-    ocdt_gini = calculate_gini(y_test, y_pred,0)
-    print(f"CSDT Gini: {ocdt_gini}")
+    csdt_gini = calculate_gini(y_test, y_pred,0)
+    print(f"CSDT Gini: {csdt_gini}")
             </pre>
         </div>
     </section>
