--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <li><b>random_state:</b> Seed value for reproducibility.</li>
                     <li><b>Tree:</b> Stores the root node of the tree.</li>
                     <li><b>use_hashmaps:</b> Whether to use hashmaps for faster computations and lookups.</li></li>
-                    <li><b>use_initial_solution:</b>Whether to start the tree building process with an initial heuristic solution. </li>
+                    <li><b>use_multithreading:</b> Enables parallel computation of feature splits to speed up tree construction.</li>
                 </ul>
             </section>
             <section>
