--- a/regression.html
+++ b/regression.html
@@ -133,9 +133,9 @@ from IPython.display import Image</pre>
 <pre>SEED = 0
     np.random.seed(SEED)
     
-    ocdt_min_samples_split = 10
-    ocdt_min_samples_leaf = 5
-    ocdt_depth = 5
+    csdt_min_samples_split = 10
+    csdt_min_samples_leaf = 5
+    csdt_depth = 5
     verbose = False
     
     base_folder = os.getcwd()
@@ -234,9 +234,9 @@ split_criteria = lambda y, x,initial_solution: split_criteria_with_methods(
 
 # Initialize the custom decision tree regressor
 tree = CSDT(
-    max_depth=ocdt_depth,
-    min_samples_leaf=ocdt_min_samples_leaf,
-    min_samples_split=ocdt_min_samples_split,
+    max_depth=csdt_depth,
+    min_samples_leaf=csdt_min_samples_leaf,
+    min_samples_split=csdt_min_samples_split,
     split_criteria=split_criteria,
     verbose=verbose,
     use_initial_solution = True,
@@ -264,8 +264,8 @@ y_pred = tree.predict(X_test)</pre>
         <section>
             <div class="code-block">
 <pre># Calculate and display MSE for CSDT
-ocdt_mse = mean_squared_error(y_test, y_pred)
-print(f"CSDT MSE: {ocdt_mse}")</pre>
+csdt_mse = mean_squared_error(y_test, y_pred)
+print(f"CSDT MSE: {csdt_mse}")</pre>
 </div>
         </section>
 
@@ -287,9 +287,9 @@ print(f"CSDT MSE: {ocdt_mse}")</pre>
 <pre># Initialize Scikit-Learn decision tree regressor
 regressor = DecisionTreeRegressor(
     random_state=20,
-    min_samples_leaf=ocdt_min_samples_leaf,
-    min_samples_split=ocdt_min_samples_split,
-    max_depth=ocdt_depth
+    min_samples_leaf=csdt_min_samples_leaf,
+    min_samples_split=csdt_min_samples_split,
+    max_depth=csdt_depth
 )
 
 # Train the Scikit-Learn regressor
