--- a/csdt.html
+++ b/csdt.html
@@ -116,6 +116,8 @@
                 <li><b>max_features:</b> Maximum number of features considered for splitting.</li>
                 <li><b>random_state:</b> Seed value for reproducibility.</li>
                 <li><b>Tree:</b> Stores the root node of the tree.</li>
+                <li><b>use_hashmaps:</b> Whether to use hashmaps for faster computations and lookups.</li></li>
+                <li><b>use_multithreading:</b> Enables parallel computation of feature splits to speed up tree construction.</li>
             </ul>
         </section>
         <section>
