--- a/user-guide.html
+++ b/user-guide.html
@@ -98,8 +98,8 @@ def calculate_mse(y, predictions,initial_solution):
     return mean_squared_error(y, predictions)  # Evaluates how well predictions match actual values
 
 # Combine the above into a split_criteria function
-split_criteria = lambda y, x,initial_solution: split_criteria_with_methods(
-    y, x, pred=return_mean, split_criteria=calculate_mse,initial_solution=initial_solution
+split_criteria = lambda y, x,initial_solutions: split_criteria_with_methods(
+    y, x, pred=return_mean, split_criteria=calculate_mse,initial_solutions = initial_solutions
 )
 </code>
 </pre>
