--- a/oc.html
+++ b/oc.html
@@ -279,8 +279,8 @@ def formulate_and_solve_lp_class_data(y, x, lagrangian_multiplier=0, verbose=Fal
     def calculate_mse(y, predictions,initial_solution):
         return mean_squared_error(y, predictions)
     
-    split_criteria = lambda y, x,initial_solution: split_criteria_with_methods(
-        y, x, pred=formulate_and_solve_lp_class_data, split_criteria=calculate_mse,initial_solution = initial_solution
+    split_criteria = lambda y, x,initial_solutions: split_criteria_with_methods(
+        y, x, pred=formulate_and_solve_lp_class_data, split_criteria=calculate_mse,initial_solutions = initial_solutions
     )
     verbose = False
     tree = CSDT(
