--- a/installation.html
+++ b/installation.html
@@ -45,8 +45,8 @@ pip install csdt
             <div class="code-block">
 <pre>
 <code>
-git clone https://github.com/cagla0117/Custom-Split-Decision-Tree.git
-cd Custom-Split-Decision-Tree
+git clone https://github.com/sibirbil/CSDT.git
+cd CSDT
 pip install -e .
 </code>
 </pre>
