--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         max_depth=10,
         min_samples_leaf=5,
         min_samples_split=10,
-        split_criteria=lambda y, x,initial_solution: split_criteria_with_methods(y, x, pred=return_mean, split_criteria=calculate_mse,initial_solution = initial_solution),
+        split_criteria=lambda y, x,initial_solutions: split_criteria_with_methods(y, x, pred=return_mean, split_criteria=calculate_mse,initial_solutions = initial_solutions),
         use_hashmaps = True,
         use_initial_solution = False
     )
